--- a/index.html
+++ b/index.html
@@ -3,14 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Analysis Tools</title>
+    <title>Analysis Toolkit</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
     <style>
         :root {
             --primary-color: #2c3e50;
             --secondary-color: #3498db;
             --hover-color: #2980b9;
+            --light-bg: rgba(255, 255, 255, 0.95);
         }
 
         body {
@@ -19,34 +21,69 @@
             font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
         }
 
+        /* Navigation Bar */
+        .navbar {
+            padding: 15px 0;
+        }
+        .navbar-brand, .nav-link {
+            color: #fff;
+        }
+        .nav-link:hover {
+            color: var(--secondary-color);
+        }
+
+        /* Hero Section */
         .hero-section {
             padding: 80px 0;
             text-align: center;
-            background: rgba(255, 255, 255, 0.9);
+            background: var(--light-bg);
             margin-bottom: 40px;
             box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+            position: relative;
+            overflow: hidden;
         }
 
+        /* Tool Cards */
         .tool-card {
             background: white;
             border-radius: 15px;
             padding: 30px;
             margin: 20px;
-            transition: transform 0.3s ease, box-shadow 0.3s ease;
+            transition: all 0.3s ease;
+            position: relative;
             border: none;
         }
-
         .tool-card:hover {
-            transform: translateY(-10px);
-            box-shadow: 0 15px 30px rgba(0, 0, 0, 0.1);
+            transform: translateY(-10px) scale(1.02);
+            box-shadow: 0 20px 40px rgba(0, 0, 0, 0.15);
+            background: linear-gradient(145deg, #ffffff, #f0f0f0);
         }
-
         .card-icon {
             font-size: 3.5rem;
             color: var(--secondary-color);
             margin-bottom: 20px;
+            transition: all 0.3s ease;
+            position: relative;
+            z-index: 1;
+        }
+        .tool-card:hover .card-icon {
+            transform: scale(1.1);
+        }
+        .tool-card::before {
+            content: '';
+            position: absolute;
+            top: 20px;
+            left: 50%;
+            transform: translateX(-50%);
+            width: 80px;
+            height: 80px;
+            background: var(--secondary-color);
+            opacity: 0.1;
+            border-radius: 50%;
+            z-index: 0;
         }
 
+        /* Buttons */
         .btn-custom {
             background: var(--secondary-color);
             color: white;
@@ -54,47 +91,152 @@
             border-radius: 25px;
             transition: all 0.3s ease;
         }
-
         .btn-custom:hover {
             background: var(--hover-color);
             transform: scale(1.05);
+            box-shadow: 0 5px 15px rgba(0, 0, 0, 0.2);
+        }
+        .btn-outline-secondary {
+            border-radius: 25px;
+            padding: 12px 30px;
+            transition: all 0.3s ease;
+        }
+        .btn-outline-secondary:hover {
+            background: var(--secondary-color);
+            color: white;
+        }
+
+        /* Responsive Adjustments */
+        @media (max-width: 768px) {
+            .hero-section {
+                padding: 40px 0;
+            }
+            .tool-card {
+                margin: 20px 0;
+            }
         }
     </style>
 </head>
 <body>
+    <!-- Navigation Bar -->
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+        <div class="container">
+            <a class="navbar-brand" href="#">Analysis Toolkit</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav ms-auto">
+                    <li class="nav-item">
+                        <a class="nav-link" href="concentrationpredictor.html">Concentration Predictor</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="p2g convertor.html">Image Analysis Tool</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </nav>
+
+    <!-- Hero Section -->
     <div class="hero-section">
         <div class="container">
-            <h1 class="display-4 mb-4">Analysis Toolkit</h1>
-            <p class="lead text-muted mb-5">Tools for concentration analysis and image processing</p>
+            <h1 class="display-4 mb-4 animate__animated animate__fadeInDown">Analysis Toolkit</h1>
+            <p class="lead text-muted mb-3 animate__animated animate__fadeInUp">Tools for concentration analysis and image processing</p>
+            <p class="text-muted animate__animated animate__fadeInUp">Streamline your research with our easy-to-use web-based tools.</p>
             
             <div class="row justify-content-center">
-                <div class="col-md-5">
+                <!-- Concentration Predictor Card -->
+                <div class="col-md-5 animate__animated animate__fadeInLeft">
                     <div class="tool-card">
-                        <i class="fas fa-vial card-icon"></i>
+                        <i class="fas fa-vial card-icon" aria-hidden="true"></i>
                         <h3>Concentration Predictor</h3>
                         <p>Convert greyscale values to concentration measurements using calibration data</p>
-                        <a href="concentrationpredictor.html" class="btn btn-custom">
-                            Open Tool <i class="fas fa-arrow-right ms-2"></i>
-                        </a>
+                        <div class="d-flex justify-content-center gap-3">
+                            <a href="concentrationpredictor.html" class="btn btn-custom">
+                                Open Tool <i class="fas fa-arrow-right ms-2" aria-hidden="true"></i>
+                            </a>
+                            <button class="btn btn-outline-secondary" data-bs-toggle="modal" data-bs-target="#concentrationModal">
+                                Learn More
+                            </button>
+                        </div>
                     </div>
                 </div>
                 
-                <div class="col-md-5">
+                <!-- Image Analysis Tool Card -->
+                <div class="col-md-5 animate__animated animate__fadeInRight animate__delay-1s">
                     <div class="tool-card">
-                        <i class="fas fa-image card-icon"></i>
+                        <i class="fas fa-image card-icon" aria-hidden="true"></i>
                         <h3>Image Analysis Tool</h3>
                         <p>Convert images to greyscale values to create datasets</p>
-                        <a href="p2g convertor.html" class="btn btn-custom">
-                            Open Tool <i class="fas fa-arrow-right ms-2"></i>
-                        </a>
+                        <div class="d-flex justify-content-center gap-3">
+                            <a href="p2g convertor.html" class="btn btn-custom">
+                                Open Tool <i class="fas fa-arrow-right ms-2" aria-hidden="true"></i>
+                            </a>
+                            <button class="btn btn-outline-secondary" data-bs-toggle="modal" data-bs-target="#imageModal">
+                                Learn More
+                            </button>
+                        </div>
                     </div>
                 </div>
             </div>
         </div>
     </div>
 
+    <!-- Modals -->
+    <!-- Concentration Predictor Modal -->
+    <div class="modal fade" id="concentrationModal" tabindex="-1" aria-labelledby="concentrationModalLabel" aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="concentrationModalLabel">Concentration Predictor</h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+                    <p>This tool converts greyscale values from images into concentration measurements using calibration data. Perfect for lab research and data analysis.</p>
+                    <h6>Features:</h6>
+                    <ul>
+                        <li>Easy calibration process</li>
+                        <li>Supports multiple image formats</li>
+                        <li>Real-time concentration calculation</li>
+                    </ul>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                    <a href="concentrationpredictor.html" class="btn btn-primary">Open Tool</a>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <!-- Image Analysis Tool Modal -->
+    <div class="modal fade" id="imageModal" tabindex="-1" aria-labelledby="imageModalLabel" aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="imageModalLabel">Image Analysis Tool</h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+                    <p>Transform images into greyscale datasets for further analysis. Ideal for preprocessing in scientific studies.</p>
+                    <h6>Features:</h6>
+                    <ul>
+                        <li>Fast image conversion</li>
+                        <li>Exportable datasets</li>
+                        <li>User-friendly interface</li>
+                    </ul>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                    <a href="p2g convertor.html" class="btn btn-primary">Open Tool</a>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <!-- Footer -->
     <footer class="text-center py-4 text-muted">
-        <p>BioAnalysis Toolkit &copy; 2023 | Powered by GitHub Pages</p>
+        <p>BioAnalysis Toolkit © 2023 | Powered by GitHub Pages</p>
     </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
